--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
     <div class="container"></div>
     <script src="./assets/js/script.js"></script>
 </body>
