Add grid customization and hover effects
- Created a mouseover event listener to change the color of divs on hover.
- Added a button to prompt the user for the number of squares per side for a new grid.
- Implemented an event listener for the button to trigger grid resizing.
- Styled the button and hover effect for divs in style.css.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-a-Sketch</title>
+    <title>Etch and Sketch</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Etch-a-Sketch</h1>
+    <h1>Etch and Sketch</h1>
+    <button class="btn">Enter the number of squares</button>
     <div class="container"></div>
     <script src="./assets/js/script.js"></script>
 </body>
